
Version 3.3.8 - xx yyy 2019
Generic changes/fixes
	* catch possible IndexOutOfBoundsException while updating cell voltage window
	* 32 bit Linux seams still better compatible with GTK-2, use export SWT_GTK3=0 force using GTK-2 libs
	
Device specific changes/fixes
	* HoTTAdapter2 - fix power calculation while importing *.log EAM
	* CellLog8S - fix cell voltage display, correct index
	
	
Version 3.3.7 - 14 Apr 2019
Generic changes/fixes
	* make none active measurement visible while history exploring
	* fix wrong naming replacement direction_start
	* add a check while user tries to create OSD-file direct in object directory to prevent overwriting data file with file link
	* update XSD version to force device xml replacement due to xml changes for several devices
	* add DataExplorer.cmd script to Windows installation to be used while openJDK is installed and java.exe in PATH
	* add news URL while update check detected new version
	
Device specific changes/fixes
	* HoTTAdapter* - enable channel values in % configurable using device dialog
	* iCharger X6/X8 - adapt parsing algorithm to support FW 207 beta 2
	* iChargerUSB - add scale synchronization cell Ri sum to pack Ri
	* NMEA-Adapter - correct measurement name direction to direction_start (direction relative to start point),
    * NMEA-Adapter - reduce one none necessary call to updateVisibilityStatus
    * GPS-Logger* - remove generated glide ratio and exchange with azimuth instead
    * GPS-Logger3 - correct time stamp evaluation, it has only two digits instead of three
    * GPS-Logger3 - fix parsing error while invalid data
    * GPS-Logger3 - fix time calculation adding DST offset if required
    * GPS-Logger3 - enable log evaluation without GPS-fix while UniLog injects time stamp
	
Version 3.3.6 - 12 Mar 2019
Generic changes/fixes
	* use char instead of string const. while string operations for performance reasons
	* update SWT to version 4.9, last version 32 bit versions distributed