@@ -8,6 +8,7 @@ Generic changes/fixes
 Device specific changes/fixes
 	* HoTTAdapter2 - fix power calculation while importing *.log EAM
 	* CellLog8S - fix cell voltage display, correct index
+	* iCharger* - fix index temperature intern/extern for serial connected once only
 	
 	
 Version 3.3.7 - 14 Apr 2019
